--- a/copy-gcs-bucket-contents-to-s3/action.yaml
+++ b/copy-gcs-bucket-contents-to-s3/action.yaml
@@ -23,7 +23,7 @@ inputs:
   project_id_bucket:
     description: GCP project ID
     required: true
-  bucket_name:
+  gcs_bucket:
     description: Bucket name
     required: true
   gcp_credentials_workload:
@@ -39,7 +39,7 @@ runs:
     - name: Setup gcloud CLI workload
       uses: google-github-actions/setup-gcloud@v0
       with:
-        service_account_key: ${{ secrets.gcp_credentials_workload }}
+        service_account_key: ${{ inputs.gcp_credentials_workload }}
         project_id: ${{ inputs.project_id_workload }}
 
     - name: Get GKE cluster credentials
@@ -47,11 +47,13 @@ runs:
       with:
         cluster_name: ${{ inputs.cluster_name }}
         location: ${{ inputs.location }}
-        credentials: ${{ secrets.gcp_credentials_workload }}
+        credentials: ${{ inputs.gcp_credentials_workload }}
 
     - name: Check bucket's secret exist
-      run: ${{ format('{0}/check-k8s-secret-exist.sh {1} {2}', github.action_path,
-        inputs.secret_name, inputs.app_namespace) }}
+      env:
+        secret_name: ${{ inputs.secret_name }}
+        namespace: ${{ inputs.app_namespace }}
+      run: ${{ github.action_path }}/check-k8s-secret-exist.sh
       shell: bash
 
     - name: Read AWS S3 bucket connection secret from K8s cluster
@@ -61,7 +63,7 @@ runs:
           --template={{.data.aws_access_key_id}} | base64 --decode)
         secret=$(kubectl get -n ${{ inputs.app_namespace }} secrets/${{ inputs.secret_name }} \
           --template={{.data.aws_secret_access_key}} | base64 --decode)
-        bucket=$(kubectl get -n ${{ inputs.app_namespace }} secrets/${{ inputs.secret_name }} \
+        s3_bucket=$(kubectl get -n ${{ inputs.app_namespace }} secrets/${{ inputs.secret_name }} \
           --template={{.data.bucket_name}} | base64 --decode)
         region=$(kubectl get -n ${{ inputs.app_namespace }} secrets/${{ inputs.secret_name }} \
           --template={{.data.region}} | base64 --decode)
@@ -69,7 +71,7 @@ runs:
         echo "::add-mask::$secret"
         echo "::set-output name=id::$id"
         echo "::set-output name=secret::$secret"
-        echo "::set-output name=bucket::$bucket"
+        echo "::set-output name=s3_bucket::$s3_bucket"
         echo "::set-output name=region::$region"
       shell: bash
 
@@ -87,28 +89,13 @@ runs:
     - name: Setup gcloud CLI bucket
       uses: google-github-actions/setup-gcloud@v0
       with:
-        service_account_key: ${{ secrets.gcp_credentials_bucket }}
+        service_account_key: ${{ inputs.gcp_credentials_bucket }}
         project_id: ${{ inputs.project_id_bucket }}
 
     - name: copy each item from GCS bucket to S3
       env:
         DIR: gcs
-      run: |-
-        aws configure set default.s3.max_concurrent_requests 50
-        mkdir ${DIR}
-        for path in $(gsutil ls gs://${{ inputs.bucket_name }})
-        do
-        echo "downloading each item from GCS bucket path=${path} to the folder=${DIR}"
-        for i in 1 2 3
-        do gsutil -m -q cp -r -U -c -L cp.log ${path} ${DIR} && break \
-          || echo "Failed attempt #$i out of 3 to download from GCS bucket path=${path} to the folder=${DIR}" \
-          && sleep 15
-        done
-        echo "uploading each item from the folder=${DIR} to the S3 bucket s3://${{ steps.readSecret.outputs.bucket }}"
-        aws s3 cp --recursive --only-show-errors ${DIR} s3://${{ steps.readSecret.outputs.bucket }}
-        echo "clean up all files from the folder=${DIR} to preserve disk space"
-        rm -rf ${DIR}/*
-        done
-        echo "Post Configure AWS Credentials clean up"
-        rm ~/.aws/credentials
+        gcs_bucket: ${{ inputs.gcs_bucket }}
+        s3_bucket: ${{ steps.readSecret.outputs.s3_bucket }}
+      run: ${{ github.action_path }}/copy-gcs-bucket-contents-to-s3.sh
       shell: bash
