improvement: always run clean up [skip ci]
Signed-off-by: Denis Trofimov <denis.trofimov@huma.com>

--- a/copy-gcs-bucket-contents-to-composed-s3/action.yaml
+++ b/copy-gcs-bucket-contents-to-composed-s3/action.yaml
@@ -99,3 +99,8 @@ runs:
         s3_bucket: ${{ steps.readSecret.outputs.s3_bucket }}
       run: ${{ github.action_path }}/copy-gcs-bucket-contents-to-s3.sh
       shell: bash
+
+    - name: Post Configure AWS Credentials clean up
+      if: always()    
+      run: rm ~/.aws/credentials
+      shell: bash
