--- a/copy-gcs-bucket-contents-to-existing-s3/action.yaml
+++ b/copy-gcs-bucket-contents-to-existing-s3/action.yaml
@@ -55,5 +55,6 @@ runs:
       shell: bash
 
     - name: Post Configure AWS Credentials clean up
+      if: always()    
       run: rm ~/.aws/credentials
       shell: bash
