feat: [HCB-433] suppress CI errors for restore DB action
Signed-off-by: Denis Trofimov <denis.trofimov@huma.com>

--- a/deploy-helm-chart-to-gke/action.yaml
+++ b/deploy-helm-chart-to-gke/action.yaml
@@ -52,7 +52,7 @@ inputs:
     required: true
 outputs:
   result:
-    description: helm's exit code
+    description: action's exit code
     value: ${{ steps.helm.outputs.result }}
 runs:
   using: composite
