--- a/restore-mongodb-archived-db/action.yaml
+++ b/restore-mongodb-archived-db/action.yaml
@@ -36,6 +36,10 @@ inputs:
   gcp_credentials:
     description: GCP Service Account Key
     required: true
+outputs:
+  result:
+    description: action's exit code
+    value: ${{ steps.result.outputs.result }}
 
 runs:
   using: composite
@@ -55,31 +59,58 @@ runs:
         credentials: ${{ inputs.gcp_credentials }}
 
     - name: Download an object from a bucket
+      id: download
       env:
         dump_name: dump_hs_sandbox_${{ inputs.source_db_name }}.gz
-      run: gsutil cp gs://${{ inputs.bucket_name }}/${{ env.dump_name }} .
+      run: |
+        gsutil cp gs://${{ inputs.bucket_name }}/${{ env.dump_name }} . && result=0 || result=$?
+        echo "::set-output name=result::$result"
       shell: bash
 
     - name: Check that MongoDB pod is running
+      id: pod
+      if: steps.download.output.result == 0
       env:
         pod: ${{ inputs.db_service }}
         namespace: ${{ inputs.db_namespace }}
-      run: ${{ github.action_path }}/check-k8s-pod-running.sh
+      run: |
+        ${{ github.action_path }}/check-k8s-pod-running.sh && result=0 || result=$?
+        echo "::set-output name=result::$result"
       shell: bash
 
     - name: Check that MongoDBUser's secret exist
+      id: secret
+      if: steps.download.output.result == 0 && steps.pod.output.result == 0
       env:
         secret_name: ${{ inputs.db_user }}
         namespace: ${{ inputs.app_namespace }}
-      run: ${{ github.action_path }}/check-k8s-secret-exist.sh
+      run: |
+        ${{ github.action_path }}/check-k8s-secret-exist.sh && result=0 || result=$?
+        echo "::set-output name=result::$result"
       shell: bash
 
     - name: Restore a MongoDB dump from an archive
+      id: restore
+      if: ${{ steps.download.output.result == 0 && steps.pod.output.result == 0 
+        && steps.secret.output.result == 0 }}
       env:
         source_db_name: ${{ inputs.source_db_name }}
         db_user: ${{ inputs.db_user }}
         app_namespace: ${{ inputs.app_namespace }}
         db_service: ${{ inputs.db_service }}
         db_namespace: ${{ inputs.db_namespace }}
-      run: ${{ github.action_path }}/restore-mongodb-archived-db.sh
+      run: |
+        ${{ github.action_path }}/restore-mongodb-archived-db.sh && result=0 || result=$?
+        echo "::set-output name=result::$result"
+      shell: bash
+
+    - name: result
+      id: result
+      run: |
+        for r in ${{ steps.download.output.result }} ${{ steps.pod.output.result }} \
+          ${{ steps.secret.output.result }} ${{ steps.restore.output.result }}
+        do 
+          result=$r && [ $result -gt 0 ] && break
+        done
+        echo "::set-output name=result::$result"
       shell: bash
