--- a/uninstall-helm-chart/action.yaml
+++ b/uninstall-helm-chart/action.yaml
@@ -30,7 +30,7 @@ inputs:
     default: 'false'
 outputs:
   result:
-    description: helm's exit code
+    description: action's exit code
     value: ${{ steps.helm.outputs.result }}
 runs:
   using: composite
