--- a/create-grafana-logs-dashboard/action.yaml
+++ b/create-grafana-logs-dashboard/action.yaml
@@ -26,7 +26,7 @@ outputs:
     description: Dashboard UID
     value: ${{ steps.dashboard.outputs.uid }}
   result:
-    description: script's exit code
+    description: action's exit code
     value: ${{ steps.dashboard.outputs.result }}    
 runs:
   using: composite
