ref: [HCB-430] varible Grafana host
Signed-off-by: Denis Trofimov <denis.trofimov@huma.com>

--- a/create-grafana-logs-dashboard/action.yaml
+++ b/create-grafana-logs-dashboard/action.yaml
@@ -9,6 +9,10 @@ inputs:
   grafana_api_key:
     description: Grafana API key, editor or admin
     required: true
+  grafana_host: 
+    default: https://humasandbox.grafana.net
+    description: Grafana host
+    required: false    
   cluster_name:
     description: GKE cluster name
     required: true
@@ -38,6 +42,7 @@ runs:
       id: dashboard
       env:
         grafana_api_key: ${{ inputs.grafana_api_key }}
+        grafana_host: ${{ inputs.grafana_host }}
         cluster_name: ${{ inputs.cluster_name }}
         app_name: ${{ inputs.app_name }}
         app_namespace: ${{ inputs.app_namespace }}
